--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "whatwg-fetch": "^3.6.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.0",
     "bootstrap": "^5.2.1",
     "jquery": "^3.6.1",
     "regenerator-runtime": "^0.13.9"
